--- a/MyApp/app/src/main/res/layout/activity_main.xml
+++ b/MyApp/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="demo2"
+        android:id="@+id/btn_demo2"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/btn_demo1"
+        android:layout_toEndOf="@+id/btn_demo1" />
 </RelativeLayout>
